--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,23 @@
 {
+  "type": "module",
   "dependencies": {
-    "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mongoose": "^8.2.1",
-    "morgan": "^1.10.0",
-    "nodemon": "^3.1.0"
-  }
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon":"^3.1.0"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "server": "nodemon server.js"
+  },
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "server.js",
+  "author": "\"Piyush Gaur\"",
+  "license": "ISC",
+  "description": ""
 }
