--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Your backend service description",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "server": "nodemon server.js",
     "dev": "nodemon server.js" 
