--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "author": "\"Piyush Gaur\"",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
