--- a/backend/package.json
+++ b/backend/package.json
@@ -6,20 +6,21 @@
   "type": "module",
   "scripts": {
     "server": "nodemon index.js",
-    "dev": "nodemon index.js" ,
-    "start":"node index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "author": "\"Piyush Gaur\"",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.5",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-formidable": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
+    "nodemailer": "^6.9.14",
     "razorpay": "^2.9.4"
   },
   "devDependencies": {
